--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -21,12 +21,14 @@
     "react": "^19"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@paket/api": "workspace:*",
     "@xstate/react": "^5.0.2",
     "antd": "^5.23.3",
+    "fuse.js": "^7.0.0",
     "jotai": "^2.11.3",
     "xstate": "^5.19.2"
   },
