--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
-    "@paket/api": "workspace:*",
+    "@paket/shared": "workspace:*",
     "@xstate/react": "^5.0.2",
     "antd": "^5.23.3",
     "fuse.js": "^7.0.0",
