--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@paket/api",
+  "name": "@paket/shared",
   "version": "0.0.0",
   "private": "true",
   "type": "module",
@@ -20,8 +20,8 @@
     "react": "^18"
   },
   "dependencies": {
-    "@tanstack/react-query": "5.62.11",
-    "@tanstack/react-query-devtools": "5.64.1"
+    "@tanstack/react-query": "5.66.0",
+    "@tanstack/react-query-devtools": "5.66.0"
   },
   "devDependencies": {
     "@paket/eslint-config": "workspace:*",
