--- a/apps/courier-chef/package.json
+++ b/apps/courier-chef/package.json
@@ -11,9 +11,13 @@
   },
   "peerDependencies": {
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@tanstack/react-query": "^5"
   },
   "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@tanstack/react-query": "5.66.0",
     "@paket/shared": "workspace:*",
     "@paket/features": "workspace:*"
   },
@@ -27,6 +31,7 @@
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "@tanstack/react-query-devtools": "5.66.0",
     "globals": "^15.14.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
