--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -18,16 +18,14 @@
     "lint": "eslint src --max-warnings 0"
   },
   "peerDependencies": {
-    "react": "^18"
+    "react": "^18",
+    "@tanstack/react-query": "^5"
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@paket/shared": "workspace:*",
-    "@xstate/react": "^5.0.2",
     "antd": "^5.23.3",
-    "fuse.js": "^7.0.0",
-    "jotai": "^2.11.3",
-    "xstate": "^5.19.2"
+    "fuse.js": "^7.0.0"
   },
   "devDependencies": {
     "@paket/eslint-config": "workspace:*",
