--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -17,11 +17,8 @@
     "lint": "eslint src --max-warnings 0"
   },
   "peerDependencies": {
-    "react": "^18"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "5.66.0",
-    "@tanstack/react-query-devtools": "5.66.0"
+    "react": "^18",
+    "@tanstack/react-query": "^5"
   },
   "devDependencies": {
     "@paket/eslint-config": "workspace:*",
