--- a/apps/courier-chef/package.json
+++ b/apps/courier-chef/package.json
@@ -12,12 +12,16 @@
   "peerDependencies": {
     "react": "^18",
     "react-dom": "^18",
+    "antd": "^5",
+    "@ant-design/icons": "^5",
     "@tanstack/react-query": "^5"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "@tanstack/react-query": "5.66.0",
+    "antd": "^5.23.3",
+    "@ant-design/icons": "^5.6.1",
     "@paket/shared": "workspace:*",
     "@paket/features": "workspace:*"
   },
