--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -18,6 +18,8 @@
   },
   "peerDependencies": {
     "react": "^18",
+    "antd": "^5",
+    "@ant-design/icons": "^5",
     "@tanstack/react-query": "^5"
   },
   "devDependencies": {
