--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@paket/shared",
   "version": "0.0.0",
-  "private": "true",
   "type": "module",
+  "sideEffects": [
+    "**/*.css"
+  ],
   "exports": {
     ".": {
       "require": "./src/index.ts",
       "default": "./src/index.ts",
-      "import": "./src/index.ts",
-      "types": "./src/index.ts"
-    }
+      "import": "./src/index.ts"
+    },
+    "./styles.css": "./styles.css"
   },
-  "main": "src/index.ts",
   "scripts": {
     "check-types": "tsc --noEmit",
     "lint": "eslint src --max-warnings 0"
@@ -27,6 +28,9 @@
     "@paket/tailwind-config": "workspace:*",
     "@paket/typescript-config": "workspace:*",
     "@types/react": "^18.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.7.3"
   }
 }
