--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,15 @@
 {
   "eslint.workingDirectories": [
     {
-      "mode": "auto"
+      "pattern": "./apps/*/"
+    },
+    {
+      "pattern": "./packages/*/"
+    },
+    {
+      "pattern": "./configs/*/"
     }
-  ]
+  ],
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true
 }
